--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Document files are kept locally, in order to not leak our emails etc.
+sneakspeak.pdf
+sneakspeak.tex
+
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
